--- a/layouts/partials/css.html
+++ b/layouts/partials/css.html
@@ -2,3 +2,52 @@
 
 <!-- Distill can load KaTeX -->
 <!-- <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/katex@0.10.0-beta/dist/katex.min.css" integrity="sha384-9tPv11A+glH/on/wEu99NVwDPwkMQESOocs/ZGXPoIiLE8MU/qkqUcZ3zzL+6DuH" crossorigin="anonymous"> -->
+
+<style>
+  @font-face {
+      font-family: 'Lexend';
+      font-style: normal;
+      font-weight: 300;
+      src: url('/fonts/lexend-v14-latin/lexend-v14-latin-300.eot'); /* IE9 Compat Modes */
+      src: local(''),
+           url('/fonts/lexend-v14-latin/lexend-v14-latin-300.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+           url('/fonts/lexend-v14-latin/lexend-v14-latin-300.woff2') format('woff2'), /* Super Modern Browsers */
+           url('/fonts/lexend-v14-latin/lexend-v14-latin-300.woff') format('woff'), /* Modern Browsers */
+           url('/fonts/lexend-v14-latin/lexend-v14-latin-300.ttf') format('truetype'), /* Safari, Android, iOS */
+           url('/fonts/lexend-v14-latin/lexend-v14-latin-300.svg#Lexend') format('svg'); /* Legacy iOS */
+    }
+    
+    /* lexend-regular - latin, https://www.lexend.com/ */
+    @font-face {
+      font-family: 'Lexend';
+      font-style: normal;
+      font-weight: 400;
+      src: url('/fonts/lexend-v14-latin/lexend-v14-latin-regular.eot'); /* IE9 Compat Modes */
+      src: local(''),
+           url('/fonts/lexend-v14-latin/lexend-v14-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+           url('/fonts/lexend-v14-latin/lexend-v14-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+           url('/fonts/lexend-v14-latin/lexend-v14-latin-regular.woff') format('woff'), /* Modern Browsers */
+           url('/fonts/lexend-v14-latin/lexend-v14-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+           url('/fonts/lexend-v14-latin/lexend-v14-latin-regular.svg#Lexend') format('svg'); /* Legacy iOS */
+    }
+    
+    /* lexend-500 - latin, https://www.lexend.com/ */
+    @font-face {
+      font-family: 'Lexend';
+      font-style: normal;
+      font-weight: 500;
+      src: url('/fonts/lexend-v14-latin/lexend-v14-latin-500.eot'); /* IE9 Compat Modes */
+      src: local(''),
+           url('/fonts/lexend-v14-latin/lexend-v14-latin-500.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+           url('/fonts/lexend-v14-latin/lexend-v14-latin-500.woff2') format('woff2'), /* Super Modern Browsers */
+           url('/fonts/lexend-v14-latin/lexend-v14-latin-500.woff') format('woff'), /* Modern Browsers */
+           url('/fonts/lexend-v14-latin/lexend-v14-latin-500.ttf') format('truetype'), /* Safari, Android, iOS */
+           url('/fonts/lexend-v14-latin/lexend-v14-latin-500.svg#Lexend') format('svg'); /* Legacy iOS */
+    }
+    
+    
+  p {
+      font-family: "Lexend", Helvetica, Arial, sans-serif;
+      font-weight: 300;
+  }
+  </style>
