--- a/layouts/partials/css.html
+++ b/layouts/partials/css.html
@@ -1,4 +1,5 @@
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.9.0/css/all.css">
+<link rel="preload" href="https://use.fontawesome.com/releases/v5.9.0/css/all.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+<noscript><link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.9.0/css/all.css"></noscript>
 
 <!-- Distill can load KaTeX -->
 <!-- <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/katex@0.10.0-beta/dist/katex.min.css" integrity="sha384-9tPv11A+glH/on/wEu99NVwDPwkMQESOocs/ZGXPoIiLE8MU/qkqUcZ3zzL+6DuH" crossorigin="anonymous"> -->
