--- a/layouts/partials/css.html
+++ b/layouts/partials/css.html
@@ -1,3 +1,6 @@
+<link rel="preload" href="https://use.fontawesome.com/releases/v5.9.0/webfonts/fa-solid-900.woff2&display=swap" as="font">
+<link rel="preload" href="https://use.fontawesome.com/releases/v5.9.0/webfonts/fa-brands-400.woff2&display=swap" as="font">
+
 <link rel="preload" href="https://use.fontawesome.com/releases/v5.9.0/css/all.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
 <noscript><link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.9.0/css/all.css"></noscript>
 
