removed uppercase menu css

--- a/layouts/partials/distill/header.html
+++ b/layouts/partials/distill/header.html
@@ -24,9 +24,9 @@
       font-weight: 300;
     }
     d-header .nav a {
-      font-size: 0.94em;
+      font-size: 0.9em;
       margin-left: 1.5em;
-      text-transform: uppercase;
+      /*text-transform: uppercase;*/
     }
 
     d-header .logo {
