removed menu target=_blank

--- a/layouts/partials/distill/header.html
+++ b/layouts/partials/distill/header.html
@@ -24,9 +24,8 @@
       font-weight: 300;
     }
     d-header .nav a {
-      font-size: 0.9em;
+      font-size: 0.94em;
       margin-left: 1.5em;
-      /*text-transform: uppercase;*/
     }
 
     d-header .logo {
@@ -38,7 +37,7 @@
     <a href="/" class="logo">{{ .Site.Title }}</a>
     <div class="nav">
       {{ range .Site.Menus.main }}
-        <a target="_blank" href="{{ .URL }}">{{ .Title }}</a> 
+        <a href="{{ .URL }}">{{ .Title }}</a> 
       {{ end }}
       <a target="_blank" href="{{ with .OutputFormats.Get "RSS" }}{{ .RelPermalink }}{{ end }}">RSS</a>
     </div>
