--- a/layouts/partials/distill/header.html
+++ b/layouts/partials/distill/header.html
@@ -51,7 +51,7 @@
       {{ range .Site.Menus.main }}
         <a href="{{ .URL }}">{{ .Title }}</a> 
       {{ end }}
-      <a target="_blank" href="{{ with .OutputFormats.Get "RSS" }}{{ .RelPermalink }}{{ end }}">RSS</a>
+      <a target="_blank" href="{{ with .OutputFormats.Get "RSS" }}{{ .RelPermalink }}{{ end }}"><i class="fa fa-rss"></i></a>
     </div>
   </div>
 </d-header>
