Switched to specific fontawesome (rather than all) and moved to self hosted static dir. Also added locfile to gitignore

--- a/layouts/partials/css.html
+++ b/layouts/partials/css.html
@@ -1,5 +1,10 @@
-<link rel="preload" href="https://use.fontawesome.com/releases/v5.9.0/css/all.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-<noscript><link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.9.0/css/all.css"></noscript>
+<link rel="preload" href="/fonts/fontawesome/css/fontawesome.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+<link rel="preload" href="/fonts/fontawesome/css/brands.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+<link rel="preload" href="/fonts/fontawesome/css/solid.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+<noscript><link rel="stylesheet" href="/fonts/fontawesome/css/fontawesome.min.css"></noscript>
+<noscript><link rel="stylesheet" href="/fonts/fontawesome/css/brands.min.css"></noscript>
+<noscript><link rel="stylesheet" href="/fonts/fontawesome/css/solid.min.css"></noscript>
+
 
 <!-- Distill can load KaTeX -->
 <!-- <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/katex@0.10.0-beta/dist/katex.min.css" integrity="sha384-9tPv11A+glH/on/wEu99NVwDPwkMQESOocs/ZGXPoIiLE8MU/qkqUcZ3zzL+6DuH" crossorigin="anonymous"> -->
