added alt text to social icon links for accessibility

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -138,7 +138,7 @@
             <p class="kind">{{ index .Params.Categories 0 }}</p>
           {{ end }}
           {{ end }}
-          <p class="rtime">&#128339 {{ .ReadingTime }} min read</p>
+          <p class="rtime">{{ .ReadingTime }} min read</p>
         </div>
         <div class="thumbnail"><img src="{{ .Params.Thumbnail }}"></div>
         <div class="description">
