--- a/layouts/partials/distill/footer.html
+++ b/layouts/partials/distill/footer.html
@@ -53,7 +53,8 @@
       <p>
         <i class="fas fa-bolt" aria-hidden="true"></i> by <a target="_blank" href="https://gohugo.io/">Hugo</a> | 
         <i class="fas fa-paint-brush" aria-hidden="true"></i> by <a target="_blank" href="https://distill.pub/">Distill</a> |
-        <i class="fas fa-code" aria-hidden="true"></i> by <a target="_blank" href="https://github.com/activatedgeek">@activatedgeek</a>
+        <i class="fas fa-code" aria-hidden="true"></i> by <a target="_blank" href="https://github.com/activatedgeek">@activatedgeek</a> |
+        <i class="fa-solid fa-code-fork" aria-hidden="true"></i> by <a target="_blank" href="https://github.com/signalskew">@signalskew</a>
       </p>
     </div>
   </div>
