--- a/layouts/partials/social.html
+++ b/layouts/partials/social.html
@@ -1,5 +1,5 @@
 {{- range .Site.Params.social -}}
-<a target="_blank" href="{{ safeURL .url }}">
+<a target="_blank" href="{{ safeURL .url }}" alt="{{ .alt }}">
   <i class="{{ .class }}" aria-hidden="true"></i>
 </a>
 {{ end }}
