added white a:hover change to footer links

--- a/layouts/partials/distill/footer.html
+++ b/layouts/partials/distill/footer.html
@@ -27,10 +27,16 @@
     text-decoration: none;
     color: rgba(255, 255, 255, 0.8);
   }
+  dt-footer .nav a:hover {
+    color: white; 
+  }
   dt-footer .nav a i {
     font-size: 1.5em;
     color: rgba(255, 255, 255, 0.8);
     margin: 0.25em;
+  }
+  dt-footer .nav a:hover i {
+    color: white; 
   }
 
   dt-footer .footer-close p {
@@ -40,6 +46,9 @@
   dt-footer .footer-close a {
     text-decoration: none;
     color: rgba(255, 255, 255, 0.8);
+  }
+  dt-footer .footer-close a:hover {
+    color: white; 
   }
   </style>
   
