--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -25,11 +25,16 @@
   <meta name="keywords" content='{{ delimit .Site.Params.Keywords "," }}' />
 {{- end -}}
 
+
+<!-- WARN 2022/11/24 11:34:55 .Author is deprecated and will be removed in a future release. Use taxonomies.
+{{/*
 {{- if .Author -}}
   <meta name="author" content='{{ .Author }}' />
 {{ else if .Authors }}
   <meta name="author" content='{{ delimit .Authors "," }}' />
 {{- end -}}
+*/}}
+-->
 
 <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
 <link rel="apple-touch-icon" href="/favicon.ico">
