Added metadata field to config file (e.g. for Mastodon verification) Renamed "color" to "theme_color"

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -33,11 +33,11 @@
     }
 
     .l-page .pagination > :nth-child(n+3):nth-last-child(n+3) {
-      border: solid {{ .Site.Params.color }} 1px;
+      border: solid {{ .Site.Params.theme_color }} 1px;
     }
 
     .l-page .pagination .page-item.active {
-      background-color: {{ .Site.Params.color }};
+      background-color: {{ .Site.Params.theme_color }};
       border: none;
     }
 
