--- a/layouts/partials/distill/footer.html
+++ b/layouts/partials/distill/footer.html
@@ -6,7 +6,7 @@
     font-weight: 300;
     padding: 2em 0;
     border-top: 1px solid rgba(0, 0, 0, 0.1);
-    background-color: {{ .Site.Params.color }};
+    background-color: {{ .Site.Params.theme_color }};
     text-align: center;
   }
 
@@ -64,6 +64,7 @@
         <i class="fas fa-code" aria-hidden="true"></i> by <a target="_blank" href="https://github.com/activatedgeek">@activatedgeek</a> |
         <i class="fa-solid fa-code-fork" aria-hidden="true"></i> by <a target="_blank" href="https://github.com/signalskew">@signalskew</a>
       </p>
+      <p>&nbsp;</p>
       <p>
         <!--https://ar.al/2018/06/17/formatting-an-iso-8601-date-stamp-in-hugo/-->
         <i class="fa-solid fa-wand-magic-sparkles"></i> on <i>{{ now.Format "2006-01-02T15:04:05Z0700" }}</i>
