--- a/layouts/partials/distill/header.html
+++ b/layouts/partials/distill/header.html
@@ -3,7 +3,7 @@
     d-header {
       display: block;
       align-items: center;
-      background-color: {{ .Site.Params.color }};
+      background-color: {{ .Site.Params.theme_color }};
       padding: 0.75em 4em;
       z-index: 2;
       color: rgba(0, 0, 0, 0.8);
