Successful dark mode addition. Still needs some adjustments but it works.

--- a/layouts/partials/css.html
+++ b/layouts/partials/css.html
@@ -1,3 +1,7 @@
+<!-- Dark Mode -->
+<link disabled id="dark-mode-theme" rel="stylesheet" href="/css/darkmode.css">
+
+<!-- Font Awesome -->
 <link rel="preload" href="/fonts/fontawesome/css/fontawesome.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
 <link rel="preload" href="/fonts/fontawesome/css/brands.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
 <link rel="preload" href="/fonts/fontawesome/css/solid.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
