--- a/layouts/partials/distill/header.html
+++ b/layouts/partials/distill/header.html
@@ -48,6 +48,9 @@
       {{ end }}
     </a>
     <div class="nav">
+      {{ if .Site.Params.dark_mode_feature }}
+        <a id="dark-mode-toggle" class="fa-solid fa-moon"></a>
+      {{ end }}
       {{ range .Site.Menus.main }}
         <a href="{{ .URL }}">{{ .Title }}</a> 
       {{ end }}
