--- a/layouts/partials/scripts.html
+++ b/layouts/partials/scripts.html
@@ -10,3 +10,6 @@
 <script defer src="https://cdn.jsdelivr.net/npm/vega-lite@2"></script>
 <script defer src="https://cdn.jsdelivr.net/npm/vega-embed@3"></script>
 {{ end }}
+
+<!-- Dark Mode -->
+<script defer src="/js/darkmode.js"></script>
