reworked darkmode directory structure

--- a/layouts/partials/scripts.html
+++ b/layouts/partials/scripts.html
@@ -12,4 +12,4 @@
 {{ end }}
 
 <!-- Dark Mode -->
-<script defer src="/js/darkmode.js"></script>
+<script defer src="/darkmode/darkmode.js"></script>
