--- a/layouts/partials/css.html
+++ b/layouts/partials/css.html
@@ -1,5 +1,5 @@
 <!-- Dark Mode -->
-<link disabled id="dark-mode-theme" rel="stylesheet" href="/css/darkmode.css">
+<link disabled id="dark-mode-theme" rel="stylesheet" href="/darkmode/darkmode.css">
 
 <!-- Font Awesome -->
 <link rel="preload" href="/fonts/fontawesome/css/fontawesome.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
