Moved Lexend custom font into theme static folder. Small css.html format change.

--- a/layouts/partials/css.html
+++ b/layouts/partials/css.html
@@ -1,6 +1,3 @@
-<!-- Dark Mode -->
-<link disabled id="dark-mode-theme" rel="stylesheet" href="/darkmode/darkmode.css">
-
 <!-- Font Awesome -->
 <link rel="preload" href="/fonts/fontawesome/css/fontawesome.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
 <link rel="preload" href="/fonts/fontawesome/css/brands.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
@@ -13,6 +10,10 @@
 <!-- Distill can load KaTeX -->
 <!-- <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/katex@0.10.0-beta/dist/katex.min.css" integrity="sha384-9tPv11A+glH/on/wEu99NVwDPwkMQESOocs/ZGXPoIiLE8MU/qkqUcZ3zzL+6DuH" crossorigin="anonymous"> -->
 
+<!-- Dark Mode -->
+<link disabled id="dark-mode-theme" rel="stylesheet" href="/darkmode/darkmode.css">
+
+<!-- Lexend font -->
 <style>
   @font-face {
       font-family: 'Lexend';
