--- a/layouts/partials/distill/header.html
+++ b/layouts/partials/distill/header.html
@@ -11,6 +11,14 @@
       box-shadow: 0 1px 6px rgba(0, 0, 0, 0.05);
     }
 
+    d-header .content {
+      /* clear: both; */              /* keep inner divs from extending below ribbon */
+      display: flex;                  /* establish flex container */
+      flex-direction: row;            /* default value; can be omitted */
+      flex-wrap: nowrap;              /* default value; can be omitted */
+      justify-content: space-between; /* switched from default (flex-start, see below) */
+    }
+
     d-header a {
       text-decoration: none;
       color: rgba(255, 255, 255, 0.8);
@@ -40,22 +48,30 @@
   </style>
 
   <div class="content">
-    <a href="/" class="logo">
-      {{ if .Site.Params.logo }}
-        <img src="{{ .Site.Params.logo}}" />
-      {{ else if .Site.Title }}
-        {{ .Site.Title }}
-      {{ end }}
-    </a>
-    <div class="nav">
+    <div> <!-- logo / title -->
+      <a href="/" class="logo" alt="{{ .Site.Title }}">
+        {{ if .Site.Params.logo }}
+          <img src="{{ .Site.Params.logo}}"/>
+        {{ else if .Site.Title }}
+          {{ .Site.Title }}
+        {{ end }}
+      </a>
+    </div>
+    <div> <!-- center / dark mode -->
       {{ if .Site.Params.dark_mode_feature }}
         <a id="dark-mode-toggle" class="fa-solid fa-moon"></a>
       {{ end }}
+    </div>
+    <div class="nav"> <!-- menu -->
       {{ range .Site.Menus.main }}
         <a href="{{ .URL }}">{{ .Title }}</a> 
       {{ end }}
-      {{ partial "social" . }}
-      <a target="_blank" href="{{ with .OutputFormats.Get "RSS" }}{{ .RelPermalink }}{{ end }}"><i class="fa fa-rss"></i></a>
+      {{ if .Site.Params.social_in_menu }}
+        {{ partial "social" . }}
+      {{ end }}
+      {{ if .Site.Params.rss_in_menu }}
+        <a target="_blank" href="{{ with .OutputFormats.Get "RSS" }}{{ .RelPermalink }}{{ end }}"><i class="fa fa-rss"></i></a>
+      {{ end }}
     </div>
   </div>
 </d-header>
