--- a/layouts/partials/distill/footer.html
+++ b/layouts/partials/distill/footer.html
@@ -59,10 +59,10 @@
 
     <div class="footer-close">
       <p>
-        <i class="fas fa-bolt" aria-hidden="true"></i> by <a target="_blank" href="https://gohugo.io/">Hugo</a> | 
-        <i class="fas fa-paint-brush" aria-hidden="true"></i> by <a target="_blank" href="https://distill.pub/">Distill</a> |
-        <i class="fas fa-code" aria-hidden="true"></i> by <a target="_blank" href="https://github.com/activatedgeek">@activatedgeek</a> |
-        <i class="fa-solid fa-code-fork" aria-hidden="true"></i> by <a target="_blank" href="https://github.com/signalskew">@signalskew</a>
+        <i class="fas fa-bolt" aria-hidden="true"></i> by <a target="_blank" href="https://gohugo.io/" alt="Hugo">Hugo</a> | 
+        <i class="fas fa-paint-brush" aria-hidden="true"></i> by <a target="_blank" href="https://distill.pub/" alt="Distill">Distill</a> |
+        <i class="fas fa-code" aria-hidden="true"></i> by <a target="_blank" href="https://github.com/activatedgeek" alt="@activatedgeek">@activatedgeek</a> |
+        <i class="fa-solid fa-code-fork" aria-hidden="true"></i> by <a target="_blank" href="https://github.com/signalskew" alt="@signalskew">@signalskew</a>
       </p>
       <p>&nbsp;</p>
       <p>
