--- a/layouts/partials/distill/header.html
+++ b/layouts/partials/distill/header.html
@@ -64,13 +64,13 @@
           <a id="dark-mode-toggle" class="fa-solid fa-moon" alt="Toggle dark mode" style="cursor: pointer;"></a>
         {{ end }}
       {{ range .Site.Menus.main }}
-        <a href="{{ .URL }}">{{ .Title }}</a> 
+        <a href="{{ .URL }}" alt="{{ .Title }}">{{ .Title }}</a> 
       {{ end }}
       {{ if .Site.Params.social_in_menu }}
         {{ partial "social" . }}
       {{ end }}
       {{ if .Site.Params.rss_in_menu }}
-        <a target="_blank" href="{{ with .OutputFormats.Get "RSS" }}{{ .RelPermalink }}{{ end }}"><i class="fa fa-rss"></i></a>
+        <a target="_blank" href="{{ with .OutputFormats.Get "RSS" }}{{ .RelPermalink }}{{ end }}" alt="RSS"><i class="fa fa-rss"></i></a>
       {{ end }}
     </div>
   </div>
