Added title and alt text to anchor and image tags

--- a/layouts/404.html
+++ b/layouts/404.html
@@ -17,7 +17,7 @@
     </d-footnote>
   </p>
   
-  <figure style="grid-column: page; margin: 0;"><img src="https://78.media.tumblr.com/eeae87e80c8bd5774a79040cdab7297e/tumblr_nt8ek3qioK1ue62ito1_1280.png" style="width:100%; border: 1px solid rgba(0, 0, 0, 0.2);"/></figure>
+  <figure style="grid-column: page; margin: 0;"><img src="https://78.media.tumblr.com/eeae87e80c8bd5774a79040cdab7297e/tumblr_nt8ek3qioK1ue62ito1_1280.png" style="width:100%; border: 1px solid rgba(0, 0, 0, 0.2);" title="Graph showing a complete mess of colorful bouncing lines oscillating all over the place, like a bowl of springs dumped onto a floor"/></figure>
 </d-title>
 
 <d-article></d-article>
