--- a/layouts/partials/distill/d-appendix.html
+++ b/layouts/partials/distill/d-appendix.html
@@ -7,7 +7,7 @@
     {{ $srcFileURL := (printf "%s/content/%s" .Site.Params.SourcePrefix .File.Dir) }}
     <h3>Updates and Corrections</h3>
     <p>If you see mistakes or want to suggest changes, please create issues or revisions against
-      <a target="_blank" href="{{ $srcFileURL }}" alt="repo source">source</a>.
+      <a target="_blank" href="{{ $srcFileURL }}" title="repo source">source</a>.
     </p>
   {{ end }}
 
