Shortened fontawesome names to fas and fab for solid and brands.

--- a/layouts/partials/distill/footer.html
+++ b/layouts/partials/distill/footer.html
@@ -62,12 +62,12 @@
         <i class="fas fa-bolt" aria-hidden="true"></i> by <a target="_blank" href="https://gohugo.io/" title="Hugo">Hugo</a> | 
         <i class="fas fa-paint-brush" aria-hidden="true"></i> by <a target="_blank" href="https://distill.pub/" title="Distill">Distill</a> |
         <i class="fas fa-code" aria-hidden="true"></i> by <a target="_blank" href="https://github.com/activatedgeek" title="@activatedgeek">@activatedgeek</a> |
-        <i class="fa-solid fa-code-fork" aria-hidden="true"></i> by <a target="_blank" href="https://github.com/signalskew" title="@signalskew">@signalskew</a>
+        <i class="fas fa-code-fork" aria-hidden="true"></i> by <a target="_blank" href="https://github.com/signalskew" title="@signalskew">@signalskew</a>
       </p>
       <p>&nbsp;</p>
       <p>
         <!--https://ar.al/2018/06/17/formatting-an-iso-8601-date-stamp-in-hugo/-->
-        <i class="fa-solid fa-wand-magic-sparkles"></i> on <i>{{ now.Format "2006-01-02T15:04:05Z0700" }}</i>
+        <i class="fas fa-wand-magic-sparkles"></i> on <i>{{ now.Format "2006-01-02T15:04:05Z0700" }}</i>
       </p>
     </div>
   </div>
