--- a/layouts/partials/distill/header.html
+++ b/layouts/partials/distill/header.html
@@ -150,12 +150,12 @@
     <div class="menu-bundle">
       <!-- DARK MODE BUTTON (if enabled) -->
       {{ if .Site.Params.dark_mode_feature }}
-        <a id="dark-mode-toggle" class="fa-solid fa-moon" title="Toggle dark mode" style="cursor: pointer; padding-right: 5px;"></a>
+        <a id="dark-mode-toggle" class="fas fa-moon" title="Toggle dark mode" style="cursor: pointer; padding-right: 5px;"></a>
       {{ end }}
       <ul class="nav-links">
         <!-- HAMBURGER ICON icon -->
         <input type="checkbox" id="toggleburger" />
-        <label for="toggleburger" class="hamburger fa-solid fa-bars" style="cursor: pointer;"></label>
+        <label for="toggleburger" class="hamburger fas fa-bars" style="cursor: pointer;"></label>
         <!-- NAVIGATION MENU -->
         <div class="menu">
           <!-- MENUS -->
