--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -41,9 +41,14 @@
 */}}
 -->
 
-<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
-<link rel="apple-touch-icon" href="/favicon.ico">
-<link rel="mask-icon" href="/favicon.ico">
+<!-- Favicon (generated at https://favicon.io) -->
+<link rel="icon" href="favicon.ico"> <!-- This one must be located in /static/ -->
+<!-- Others may be elsewhere, e.g. /static/favicon -->
+<link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
+<link rel="manifest" href="/favicon/site.webmanifest">
+
 
 <link href="{{ with .OutputFormats.Get "RSS" }}{{ .RelPermalink }}{{ end }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
 <link href="{{ with .OutputFormats.Get "RSS" }}{{ .RelPermalink }}{{ end }}" rel="feed" type="application/rss+xml" title="{{ .Site.Title }}" />
