Added sticky footer feature so it stays put on short content pages

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -14,16 +14,24 @@
   {{ end }}
 </head>
 <body>
-  {{ block "header" . }}
-    {{ partial "distill/header" . }}
-  {{ end }}
-  
-  {{ block "body" . }}
-  <!-- Add Body Here -->
-  {{ end }}
+  <div class="wrapper">
+    <div class="page-header">
+      {{ block "header" . }}
+        {{ partial "distill/header" . }}
+      {{ end }}
+    </div>
+    
+    <div class="page-body">
+      {{ block "body" . }}
+      <!-- Add Body Here -->
+      {{ end }}
+    </div>
 
-  {{ block "footer" . }}
-    {{ partial "distill/footer" . }}
-  {{ end }}
+    <div class="page-footer">
+      {{ block "footer" . }}
+        {{ partial "distill/footer" . }}
+      {{ end }}
+    </div>
+  </div>
 </body>
 </html>
