Soft disabling sticky footer until resolving scrunched d-byline issue

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -8,7 +8,7 @@
   }</script>
 </d-front-matter>
 
-<div class="l-page">
+<div class="l-page page-body">
   <style>
     .l-page {
       box-sizing: border-box;
