--- a/layouts/partials/css.html
+++ b/layouts/partials/css.html
@@ -35,13 +35,14 @@
   }
 
   /* Sticky Footer (https://developer.mozilla.org/en-US/docs/Web/CSS/Layout_cookbook/Sticky_footers) */
-  html, body {
+  /* DEACTIVATED until I can figure out d-byline scrunching issue */
+  /*html, body {
     box-sizing: border-box;
     height: 100%;
     padding: 0;
     margin: 0;
   }
-  .wrapper {
+  body {
     box-sizing: border-box;
     min-height: 100%;
     display: flex;
@@ -54,4 +55,7 @@
   .page-body {
       flex-grow: 1;
   }
+  d-title, d-article {
+    overflow: visible;
+  }*/
   </style>
