--- a/layouts/partials/scripts.html
+++ b/layouts/partials/scripts.html
@@ -1,4 +1,5 @@
 <script defer src="/distill.pub/template.v2.min.js"></script>
+<!--<script defer src="/distill.pub/template.v2.js"></script>-->
 
 <!-- Distill can load KaTeX -->
 <!-- <script defer src="//cdn.jsdelivr.net/npm/katex@0.10.0-beta/dist/katex.min.js" integrity="sha384-U8Vrjwb8fuHMt6ewaCy8uqeUXv4oitYACKdB0VziCerzt011iQ/0TqlSlv8MReCm" crossorigin="anonymous"></script> -->
