Added minification credit (so I don't forget next time) in scripts.html comment.

--- a/layouts/partials/scripts.html
+++ b/layouts/partials/scripts.html
@@ -1,4 +1,5 @@
 <script defer src="/distill.pub/template.v2.min.js"></script>
+<!-- Minification by https://minify-js.com, the best I've found so far. -->
 <!--<script defer src="/distill.pub/template.v2.js"></script>-->
 
 <!-- Distill can load KaTeX -->
