--- a/layouts/partials/distill/d-title.html
+++ b/layouts/partials/distill/d-title.html
@@ -1,5 +1,7 @@
 <d-title>
   {{- if and (.Params.Distill.SupportFiles.DTitle) (fileExists ((printf "%s%s" .File.Dir .Params.Distill.SupportFiles.DTitle))) -}}
     {{- readFile (printf "%s%s" .File.Dir .Params.Distill.SupportFiles.DTitle) | safeHTML -}}
+  {{- else if .Params.Description }}
+    <p>{{ .Params.Description | safeHTML }}</p>
   {{- end -}}
 </d-title>
