--- a/layouts/partials/distill/header.html
+++ b/layouts/partials/distill/header.html
@@ -5,7 +5,7 @@
       margin: 0;
       padding: 0;
       box-sizing: border-box;
-      
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", Arial, sans-serif;
     }
 
     a {
