Moved 404.html into site content as markdown file. External metadata can now be html or md files. Emojis now supported in titles (flag to globally turn off not supported yet).

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,7 +2,7 @@
 
 <d-front-matter>
   <script type="text/json">{
-    "title": "{{ .Title }}",
+    "title": "{{ .Title | emojify }}",
     "description": "{{ .Params.Description }}",
     "authors": []
   }</script>
