--- a/layouts/partials/distill/d-front-matter.html
+++ b/layouts/partials/distill/d-front-matter.html
@@ -1,6 +1,6 @@
 <d-front-matter>
   <script type="text/json">{
-    "title": "{{ .Title }}",
+    "title": "{{ .Title | emojify }}",
     "description": "{{ .Params.Description }}",
     "published": "{{ dateFormat "Jan 2, 2006" .Date }}",
     "authors": [
