--- a/layouts/partials/distill/d-title.html
+++ b/layouts/partials/distill/d-title.html
@@ -1,7 +1,15 @@
 <d-title>
-  {{- if and (.Params.Distill.SupportFiles.DTitle) (fileExists ((printf "%s%s" .File.Dir .Params.Distill.SupportFiles.DTitle))) -}}
-    {{- readFile (printf "%s%s" .File.Dir .Params.Distill.SupportFiles.DTitle) | safeHTML -}}
+  {{ $srcFileName := .Params.Distill.SupportFiles.DTitle }}
+  {{- if $srcFileName -}}
+    {{ $srcFileURL := (printf "%s%s" .File.Dir $srcFileName) }}
+    {{- if (fileExists $srcFileURL) -}}
+      {{ if or (strings.HasSuffix $srcFileName "html") (strings.HasSuffix $srcFileName "htm") }}
+        <p>{{- readFile $srcFileURL | safeHTML -}}</p>
+      {{ else if (strings.HasSuffix $srcFileName "md") }}
+        <p>{{- readFile $srcFileURL | markdownify -}}</p>
+      {{- end -}}
+    {{- end -}}
   {{- else if .Params.Description }}
-    <p>{{ .Params.Description | safeHTML }}</p>
+    <p>{{ .Params.Description }}</p>
   {{- end -}}
 </d-title>
