Fixed vega charts not loading. Doh!

--- a/layouts/partials/scripts.html
+++ b/layouts/partials/scripts.html
@@ -8,9 +8,9 @@
 <!-- <script>renderMathInElement(document.body);</script> -->
 
 {{ if .Params.vega }}
-<script defer src="https://cdn.jsdelivr.net/npm/vega@5"></script>
-<script defer src="https://cdn.jsdelivr.net/npm/vega-lite@2"></script>
-<script defer src="https://cdn.jsdelivr.net/npm/vega-embed@3"></script>
+<script src="https://cdn.jsdelivr.net/npm/vega@5"></script>
+<script src="https://cdn.jsdelivr.net/npm/vega-lite@2"></script>
+<script src="https://cdn.jsdelivr.net/npm/vega-embed@3"></script>
 {{ end }}
 
 <!-- Dark Mode -->
