--- a/layouts/partials/distill/header.html
+++ b/layouts/partials/distill/header.html
@@ -8,11 +8,11 @@
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", Arial, sans-serif;
     }
 
-    a {
+    .menu a {
       text-decoration: none;
     }
 
-    li {
+    .menu li {
       list-style: none;
     }
 
